bin_PROGRAMS = ../server
___server_LDADD =
___server_SOURCES = \
		debug.c            debug.h \
		util.c             util.h \
		checksum.c         checksum.h \
		cblib.c            cblib.h \
		serverpool.c       serverpool.h \
		registrarserver.c  registrarserver.h \
		poolelement.c      poolelement.h \
		backend.c          backend.h \
		main.c             main.h \
		callbacks.c        callbacks.h \
		parameters.c       parameters.h \
		policy.c           policy.h \
		enrp.c             enrp.h \
		takeover.c         takeover.h \
		asap.c             asap.h

